gcc/testsuite/rust/compile/issue-3530-1.rs
#![feature(no_core)]
#![no_core]

#[repr(i32)]
enum NightsWatch {} // { dg-error "unsupported representation for zero-variant enum" }
